// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screens/JoinGroup/GroupApplyOkSnackbar renders correctly when failed props 1`] = `
<Snackbar
  SnackbarContentProps={
    Object {
      "aria-describedby": "message-id",
      "className": "group-apply-snackbar",
    }
  }
  action={
    Array [
      <IconButton
        aria-label="Close"
        color="inherit"
        onClick={[MockFunction]}
      >
        <CloseIcon />
      </IconButton>,
    ]
  }
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "bottom",
    }
  }
  autoHideDuration={60000}
  message={
    <span
      id="message-id"
    >
      ma super tribu n'existe pas
    </span>
  }
  onClose={[MockFunction]}
  open={true}
/>
`;

exports[`screens/JoinGroup/GroupApplyOkSnackbar renders correctly when success 1`] = `
<Snackbar
  SnackbarContentProps={
    Object {
      "aria-describedby": "message-id",
      "className": "group-apply-snackbar",
    }
  }
  action={
    Array [
      <IconButton
        aria-label="Close"
        color="inherit"
        onClick={[MockFunction]}
      >
        <CloseIcon />
      </IconButton>,
    ]
  }
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "bottom",
    }
  }
  autoHideDuration={60000}
  message={
    <span
      id="message-id"
    >
      <React.Fragment>
        Demande envoyée pour la tribu 
        <b />
         !
         
        <React.Fragment>
          Payer 
          € sur la
           
          <a
            className="group-join-link"
            href="https://www.paypal.com/pools/c/84gsKV8QG8"
            target="_blank"
            title="Site cagnotte"
          >
            cagnotte
          </a>
           
          pour valider votre inscription !
        </React.Fragment>
      </React.Fragment>
    </span>
  }
  onClose={[MockFunction]}
  open={true}
/>
`;

exports[`screens/JoinGroup/GroupApplyOkSnackbar renders correctly without props 1`] = `
<Snackbar
  SnackbarContentProps={
    Object {
      "aria-describedby": "message-id",
      "className": "group-apply-snackbar",
    }
  }
  action={
    Array [
      <IconButton
        aria-label="Close"
        color="inherit"
        onClick={[MockFunction]}
      >
        <CloseIcon />
      </IconButton>,
    ]
  }
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "bottom",
    }
  }
  autoHideDuration={60000}
  message={
    <span
      id="message-id"
    >
      <React.Fragment>
        Demande envoyée pour la tribu 
        <b />
         !
         
        <React.Fragment>
          Payer 
          € sur la
           
          <a
            className="group-join-link"
            href="https://www.paypal.com/pools/c/84gsKV8QG8"
            target="_blank"
            title="Site cagnotte"
          >
            cagnotte
          </a>
           
          pour valider votre inscription !
        </React.Fragment>
      </React.Fragment>
    </span>
  }
  onClose={[MockFunction]}
  open={false}
/>
`;
